Fix tree node icons causing overspacing on word wrap

--- a/app/assets/stylesheets/_partials.scss
+++ b/app/assets/stylesheets/_partials.scss
@@ -1,9 +1,8 @@
 @mixin doesnt-look-like-a-button {
-	background: none!important;
+	background: none !important;
 	border: 1px solid transparent !important;
 	color: inherit;
-	border: none; 
-	padding: 0!important;
+	padding: 0 !important;
 	cursor: pointer;
 	&:focus {
 		border: 1px dotted var(--fg-color) !important;
